<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.taras.homework.MainActivity">

    <TextView
        android:id="@+id/tv_first_field"
        android:paddingBottom="@dimen/tv_first_field_padding_bottm"
        android:layout_marginTop="@dimen/tv_first_field_margin_top"
        android:layout_marginLeft="@dimen/tv_first_field_margin_left"
        android:maxLength="3"
        android:inputType="numberDecimal"
        android:paddingLeft="@dimen/tv_first_field_padding_left"
        android:paddingRight="@dimen/tv_first_field_padding_right"
        android:textSize="@dimen/tv_first_field_text_size"
        android:hint="@string/tv_first_field_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_action"
        android:paddingLeft="@dimen/et_action_padding_left"
        android:paddingRight="@dimen/et_action_padding_right"
        android:text="@string/et_action_text"
        android:maxLength="1"
        android:textSize="@dimen/et_action_text_size"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tv_first_field"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/tv_second_field"
        android:paddingBottom="@dimen/tv_second_field_padding_bottom"
        android:hint="@string/tv_second_field_hint"
        android:layout_alignTop="@id/tv_first_field"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/tv_second_field_margin_right"
        android:maxLength="3"
        android:inputType="numberDecimal"
        android:paddingLeft="@dimen/tv_second_field_padding_left"
        android:paddingRight="@dimen/tv_second_field_padding_right"
        android:textSize="@dimen/tv_second_field_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_calculate"
        android:text="@string/btn_calculate_text"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_action"
        android:layout_marginTop="@dimen/btn_calculate_margin_top"
        android:paddingLeft="@dimen/btn_calculate_padding_left"
        android:paddingRight="@dimen/btn_calculate_padding_right"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/tv_result"
        android:paddingLeft="@dimen/tv_result_padding_left"
        android:paddingRight="@dimen/tv_result_padding_right"
        android:text="@string/tv_result_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_calculate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/tv_result_margin_top" />

    <Switch
        android:id="@+id/swtch_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/swtch_theme_margin_bottom"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
